Update index html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     
     
-    <title>Hello, world!</title>
+    <title>chatbase table by tanu</title>
   </head>
   <body>
       <div class="container mt-5" >
