--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <title>chatbase table by tanu</title>
   </head>
   <body>
-      <div class="container mt-5" >
+      <div class="container-fluid mt-5" >
         
           <div class="row" >
             <div class="col-*-4" style="width: 33%;margin-top: 100px; align-content:flex-start ">
